testsuite/vhdl/parser_rules/test_data/integer_failure/integer_failure_001.expected
integer_failure/integer_failure_001.input:1:4: parse error: Test Suite Full Match Error! Unparsed input left!
 42_
   ^ <<-- here
